--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
-	"compilerOptions": {
-		"target": "es6",
-		"module": "es6",
-		"outDir": "dist",
-		"strict": true,
-		"esModuleInterop": true,
-		"declaration": true,
-		"moduleResolution": "node",
-		"sourceMap": true
-	},
-	"include": [
-		"src"
-	]
+  "compilerOptions": {
+    "target": "es6",
+    "module": "es6",
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "moduleResolution": "node",
+    "sourceMap": true
+  },
+  "include": ["src"]
 }
