--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-json-server-lib",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "exports": {
     ".": {
@@ -9,7 +9,9 @@
     }
   },
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JGEsteves89/my-json-server-lib.git"
